<resources>
    <string name="app_name">UEFA Statistic</string>

    <string name="match_l_z_title">"Ливерпуль" - "Зальцбург" 4:3</string>
    <string name="match_ch_a_title">"Челси" - "Аякс" 4:4</string>
    <string name="match_d_sh_title">"Динамо" Загреб - "Шахтер" 3:3</string>
    <string name="match_r_b_title">"РБ Лейпциг" - "Бенфика" 2:2</string>
    <string name="match_v_a_title">"Валенсия" - "Аталанта" 3:4</string>
    <string name="match_l_a_title">"Ливерпуль" - "Атлетико" 2:3</string>
    <string name="match_a_p_title">"Аталанта" - "ПСЖ" 1:2</string>
    <string name="match_b_b_title">"Барселона" - "Бавария" 2:8</string>

    <string name="match_l_z"><i>02.10.19, групповой этап, тур 2</i>\n
"Ливерпуль" кое-что знает о камбэках. Даже со счета 0:3. Поэтому было странно видеть, как красные на "Энфилде" позволяют "Зальцбургу", вдохновленному зажигательной речью Джесси Марша в перерыве, отбирать их хлеб. Эрлинг Холанн сравнял счет, окончательно закрепившись в роли восходящей звезды, но хозяева все же не дали родиться сенсации благодаря второму голу Мохамеда Салаха\n
<b>Самый яркий момент:</b> Блестящий удар с лета Такуми Минамино, которым японец поразил ворота "Ливерпуля". Через два месяца он подписал контракт с красными.</string>
    <string name="match_ch_a"><i>05.11.19, групповой этап, тур 4</i>\n
Еще один эпичный камбэк - в этот раз не сорвавшийся. Уже после пяти минут игры счет был 1:1, и команды даже не думали сбавлять обороты. Правда, сначала феерил лишь "Аякс", который повел 4:1. При 4:2 амстердамцы потеряли из-за удалений Дейли Блинда и Йоэла Велтмана. "Челси" почувствовал свой шанс и был очень близок к победе, после того как Рис Джеймс сравнял счет. Но в итоге все закончилось вничью. "Сумасшедшая игра", - резюмировал Джеймс. Кто бы спорил!\n
 <b>Самый яркий момент:</b> Смелый штрафной удар с угла поля от Хакима Зиеша, после чего мяч рикошетом от дальней штанги и вратаря Кепы Аррисабалаги влетел в сетку.</string>
    <string name="match_d_sh"><i>6.11.19, групповой этап, тур 4</i>\n
Еще один град голов. За восемь минут до конца счет был 1:1, после чего загребцы соорудили еще два гола. Но "Шахтер" забил в ответ, а затем снова. Жуниор Мораэс подарил дончанам надежду на третьей добавленной минуте, а юный Тете, который вышел на замену и дебютировал в Лиге чемпионов, реализовал 11-метровый на 98-й. Пенальти, ни много ни мало, был назначен за фол на вратаре "Шахтера" Андрее Пятове. Ах да, еще были две красные карточки…\n
 <b>Самый яркий момент:</b> Поход Пятова на последний угловой и заработанный им решающий пенальти.
    </string>
    <string name="match_r_b"><i>27.11.19, групповой этап, тур 5</i>
\n
Как быстро все может измениться на футбольном поле. До последней минуты основного времени "Бенфика" вела 2:0 и была полна надежд на путевку в 1/8 финала. К тому моменту, как прозвучал финальный свисток, португальцы были вынуждены распрощаться с турниром, а в плей-офф прошел "РБ Лейпциг". Маятник качнул Эмиль Форсберг, который сперва реализовал пенальти, после чего ударом головой сравнял счет на 96-й минуте. "Нечего скрывать - я очень и очень счастлив", - сказал тогда довольный швед.
\n
 <b>Самый яркий момент:</b> Удар Рауля де Томаса со своей половины, после которого вышедший на замену голкипер "Лейпцига" Ивон Мвого чудом выцарапал мяч и не дал случиться голу.</string>
    <string name="match_v_a"><i>10.03.20, 1/8 финала, ответный матч</i>
\n
Дебютанты из "Аталанты" уже навели немало шороху, когда вышли в плей-офф после трех поражений на старте группового этапа. Но это было еще не все, далеко не все. В первом матче 1/8 финала "Аталанта" уверенно разгромила "Валенсию" дома (4:1), ну а в ответной встрече получились классические качели. Гости из Бергамо вели 1:0, 2:1, горели 2:3. В концовке "Аталанту" вытащил Йосип Иличич, который первым забил четыре мяча в выездном матче плей-офф Лиги чемпионов. "С годами я становлюсь только лучше", - без ложной скромности заметил 32-летний словенец.
\n
 <b>Самый яркий момент:</b> Гол 20-летнего таланта "Валенсии" Феррана Торреса, который перебросил вратаря ударом из-за пределов штрафной.</string>
    <string name="match_l_a"><i>11.03.20, 1/8 финала, ответный матч</i>
\n
Единственный поединок сезона, в котором понадобилось дополнительное время, держал в напряжении от начала и до конца. На 94-й минуте Роберто Фирмино вывел красных вперед, сделав общий счет 2:1. Казалось, защита титула "Ливерпуля" больше не под угрозой. Однако дубль вышедшего на замену Маркоса Льоренте и точный удар Альваро Мораты в самой концовке вынудили мерсисайдцев сложить чемпионские полномочия в первом же раунде плей-офф. "Вообще-то, меняя Диего Косту на Льоренте, мы планировали усилить оборону, но это не сработало!" - ухмыльнулся тренер "Атлетико" Диего Симеоне.
\n
 <b>Самый яркий момент:</b> Размахивающий руками Симеоне, который поднимает на ноги болельщиков "Атлетико" в конце матча.</string>
    <string name="match_a_p"><i>12.08.20, четвертьфинал</i>
\n
"Шупо-Мотинга в президенты!" - это лишь один из многих восторженных заголовков в французских СМИ после выхода "ПСЖ" в полуфинал Лиги чемпионов. В день своего 50-летия парижане были на волоске от провала, но на выручку пришли неожиданные герои - центральный защитник Маркиньос и нападающий Эрик-Максим Шупо-Мотинг, вышедший на замену. Причем изначально его даже не включили в заявку "ПСЖ" на плей-офф. Чистая драма!
\n
 <b>Самый яркий момент:</b> Игроки "ПСЖ", скандирующие "Шупо! Шупо!", после того как форвард застолбил место в истории клуба.</string>
    <string name="match_b_b"><i>14.08.20, четвертьфинал</i>
\n
В отличие от большинства приведенных выше матчей, равной борьбы здесь не было и близко, но о нем будут говорить годами. Это была невероятно яркая демонстрация атакующей мощи "Баварии", которая стерла "Барселону" с лица земли. Каталонцы тут же отправили в отставку Кике Сетьена, а немецкая газета Bild на следующее утро вышла с заголовком "Победа века". В самой концовке два гола Филиппе Коутиньо, арендованного "Баварией" как раз у "Барсы", только добавили соли на рану.
\n
 <b>Самый яркий момент:</b> Издевательский обыгрыш обороны соперников юным крайним защитником Алфонсо Дэвисом перед идеальной скидкой под удар Йосуа Киммиху.</string>
    <string name="best_matches">Лучшие матчи</string>
    <string name="statistic">Статистика</string>

    <string name="title_startDate">Дата начала сезона</string>
    <string name="title_endDate">Дата окончания сезона</string>
    <string name="title_winner">Победитель</string>
    <string name="title_area">Регион</string>
    <string name="title_name">Название</string>
    <string name="description_photo">Фотография с матча</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="please_check">Please check your internet connection and try again</string>
    <string name="try_again">Try again</string>

</resources>